Fix Nav Background to Correctly Display on Smaller Screen Sizes

--- a/_scss/bbg/navigation/_menus.scss
+++ b/_scss/bbg/navigation/_menus.scss
@@ -16,6 +16,7 @@
 	z-index: 1000;
 	width: 100%;
 	margin-top: 10px;
+	background-color: rgba(255, 255, 255, 0.95);
 }
 .site-brand {
 	img {width: 290px;}
@@ -374,8 +375,8 @@
 			right: 0;
 			text-align: right;
 			margin: 0;
-			padding: 0 1rem;
-			width: 95%;
+			padding-left: 5%;
+			width: 100%;
 			
 			a {text-align: left; width: 100%;}
 			ul li.menu-item-has-children {
@@ -460,11 +461,6 @@
 // 4. LARGE SCREEN
 @include media($large-screen) {
 	.bbg__main-navigation {
-		.menu-usagm-container {
-			position: absolute;
-			width: 100%;
-			padding-left: 25%;
-			background-color: rgba(255, 255, 255, 0.95);
-		}
+		.menu-usagm-container {padding-left: 25%;}
 	}
 }
