--- a/style.css
+++ b/style.css
@@ -3636,7 +3636,8 @@ object {
   position: absolute;
   z-index: 1000;
   width: 100%;
-  margin-top: 10px; }
+  margin-top: 10px;
+  background-color: rgba(255, 255, 255, 0.95); }
 
 .site-brand img {
   width: 290px; }
@@ -3944,8 +3945,8 @@ object {
       right: 0;
       text-align: right;
       margin: 0;
-      padding: 0 1rem;
-      width: 95%; }
+      padding-left: 5%;
+      width: 100%; }
       .bbg__main-navigation .menu-usagm-container a {
         text-align: left;
         width: 100%; }
@@ -4003,10 +4004,7 @@ object {
 
 @media screen and (min-width: 1201px) {
   .bbg__main-navigation .menu-usagm-container {
-    position: absolute;
-    width: 100%;
-    padding-left: 25%;
-    background-color: rgba(255, 255, 255, 0.95); } }
+    padding-left: 25%; } }
 
 .bbg__avatar__container {
   margin: 0 auto;
